made some changes to action page

--- a/templates/news.html
+++ b/templates/news.html
@@ -1,16 +1,17 @@
 <head>
+  <h2>Some of the recent news Your stocks</h2>
+</head>
     <body>
         <p>>
-            <h2>the three news</h2>
+            
         </p>
             {% for article in articles%}
               <tr>
                 <ul>
                     <li>Headline: {{article['title']}}</li>
-                    <li>Description: {{article['description']}}</li>
-                    <li><a href="{{article['url']}}">Url: {{article['url']}}</a></li><br>
+                    <p>Description: {{article['description']}}</p>
+                    <a href="{{article['url']}}">Url: {{article['url']}}</a><br>
                 </ul>
               </tr>
             {% endfor %}
     </body>
-</head>
