--- a/static/test.css
+++ b/static/test.css
@@ -21,9 +21,20 @@ input[type=text] {
   */
 
 body {
-    text-align: center;
+  text-align: center;
+  background-image: url('../images/stock_bg.jpg');
+  background-size: 50% 100%;
 }
+
 form {
-    display: inline-block;
+  display: inline-block;
 }
- 
+
+.mask {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.para {
+  font-size: 30px;
+  color: white;
+}
