Updated the background image and position of buttons

--- a/templates/main.html
+++ b/templates/main.html
@@ -13,9 +13,7 @@
 <body>
     <header>
         <!-- Background image -->
-        <div class="p-5 text-center bg-image" style="
-            height: 500px;
-          ">
+        <div class="p-5 text-center bg-image">
             <div class="mask">
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
@@ -25,15 +23,32 @@
             </div>
         </div>
         <!-- Background image -->
-
-        <div class="para">
-            <p>Make a value investment today.</p>
-            Get real time notification on your selected device when your selected stocks have siginificant price
-            movement.
-        </div>
-
     </header>
+    <div class="para">
+        <p>Make a value investment today.</p>
+    </div>
 
+    <div class="para" style="top: 10px" ;>Get real time notification on your selected device when your selected
+        stocks have siginificant price
+        movement.
+    </div>
+
+    <div class="button-group1">
+        <div>
+            <button type="button" class="btn btn-primary button">
+                <p>Already a User</p>
+                <p>Log in</p>
+            </button>
+        </div>
+    </div>
+
+    <div class="button-group2">
+        <button type="button" class="btn btn-primary button">
+            <p>New User</p>
+            <p>Register Here</p>
+        </button>
+
+    </div>
 
 </body>
 
