Added home page

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,41 +5,37 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../static/test.css">
+    <link rel="stylesheet" href="../static/style.css">
 
     <title>Stock News Alert</title>
 </head>
 
 <body>
-    <header>
-        <!-- Background image -->
-        <div class="p-5 text-center bg-image">
-            <div class="mask">
-                <div class="d-flex justify-content-center align-items-center h-100">
-                    <div class="text-white">
-                        <h1 class="mb-3">Stock Market Khabar</h1>
-                    </div>
-                </div>
+    <!-- Background image -->
+    <div class="p-5 text-center bg-image">
+        <div class="mask">
+            <div class="d-flex justify-content-center align-items-center h-100"></div>
+            <div class="text-white">
+                <h1 class="mb-3">Stock Market Khabar</h1>
             </div>
         </div>
-        <!-- Background image -->
-    </header>
+    </div>
+    </div>
+    <!-- Background image -->
     <div class="para">
         <p>Make a value investment today.</p>
     </div>
 
-    <div class="para" style="top: 10px" ;>Get real time notification on your selected device when your selected
+    <div class="para" style="top: 5px" ;>Get real time notification on your selected device when your selected
         stocks have siginificant price
         movement.
     </div>
 
     <div class="button-group1">
-        <div>
-            <button type="button" class="btn btn-primary button">
-                <p>Already a User</p>
-                <p>Log in</p>
-            </button>
-        </div>
+        <button type="button" class="btn btn-primary button">
+            <p>Already a User</p>
+            <p>Log in</p>
+        </button>
     </div>
 
     <div class="button-group2">
