--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,7 @@ input[type=text] {
 
 body {
   text-align: center;
-  background-image: url("../images/stock_bg.jpg");
+  background-image: url("images/stock_bg.jpg");
   background-size: 100% 250%;
 }
 
@@ -39,7 +39,7 @@ form {
   color: #fcfafa;
   position: relative;
   left: 20px;
-  top: 20px;
+  top: 15px;
 }
 
 .button {
