--- a/static/home.css
+++ b/static/home.css
@@ -1,3 +1,7 @@
+html {
+  margin: 0 30px;
+}
+
 input[type="text"],
 select {
   width: 50%;
@@ -21,7 +25,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #fc0328;
+  background-color: #409143;
 }
 
 div {
@@ -31,9 +35,12 @@ div {
 }
 
 footer {
+  width: 95%;
   display: block;
+  padding: 10px;
+  position: absolute;
+  bottom: 20px;
   text-align: center;
-  padding: 3px;
-  background-color: #327da8;
+  background-color: #007bff;
   color: white;
 }
