--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,36 @@
 <head>
   <title>Stock News Alert</title>
   <link rel="stylesheet" href="../static/home.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
+  <!-- bootstrap for navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand font-weight-bold" href="#">Stock News Khabar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">History</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/templates/login.html">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- bootstrap for navbar -->
 
-  <h1>Please Enter your Phone no and the TICKER symbol of your required Stock:</h1>
+  <br>
+  <h2>Please Enter your Phone no and the TICKER symbol of your required Stock:</h2>
   <div>
     ​<form action="/action_page.php">
       <label for="pnumber">Phone Number</label>
@@ -20,8 +45,9 @@
       <input type="submit" value="Submit">
     </form>
 
+    <br><br><br>
 
-    <footer class="container-fluid">
+    <footer class="footer">
       <p>All Rights Reserved</p>
     </footer>
   </div>
